[package]
name = "rs-proxy"
version = "0.1.0"
authors = ["xty <853122726@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
nanoid = "0.3.0"
dashmap = "3.11.10"
lazy_static = "1.4.0"
yaml-rust = "0.4.4"
async-trait = "0.1.39"
rust-crypto = "^0.2"
log = "0.4.11"
log4rs = "0.13.0"
quinn = "0.6.1"
