[package]
name = "rs-proxy"
version = "0.1.0"
authors = ["xty <853122726@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
nanoid = "0.3"
dashmap = "4.0"
once_cell = "1.5"
yaml-rust = "0.4"
async-trait = "0.1"
rust-crypto = "0.2"
log = "0.4"
log4rs = "1.0"
socket2 = "0.3"
libloading = "0.6"
