[package]
name = "rs-proxy"
version = "0.1.0"
authors = ["xty <853122726@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
rand = "0.8"
once_cell = "1"
yaml-rust = "0.4"
log = "0.4"
log4rs = "1"
socket2 = "0.3"
libloading = "0.7"
parking_lot = "0.11"
tokio-rustls = "0.22"
